--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.8",
     "@nuxt/test-utils": "3.19.1",
+    "@nuxtjs/seo": "3.1.0",
     "@tailwindcss/vite": "^4.1.10",
     "@unhead/vue": "^2.0.3",
     "class-variance-authority": "^0.7.1",
