--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/seo": "3.1.0",
     "@tailwindcss/vite": "^4.1.10",
     "@unhead/vue": "^2.0.3",
+    "@vueuse/core": "^13.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.0.0",
