--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
     "@nuxt/eslint": "1.4.1",
@@ -25,10 +30,12 @@
     "@vueuse/core": "^13.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.6",
     "embla-carousel-vue": "^8.6.0",
     "eslint": "^9.0.0",
     "lucide-vue-next": "^0.515.0",
     "nuxt": "^4.1.0",
+    "pg": "^8.13.1",
     "reka-ui": "^2.3.1",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
@@ -40,6 +47,10 @@
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.8",
     "zod": "^4.1.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.27.0",
+    "tsx": "^4.19.1"
   },
   "packageManager": "pnpm@9.15.9+sha512.68046141893c66fad01c079231128e9afb89ef87e2691d69e4d40eee228988295fd4682181bae55b58418c3a253bde65a505ec7c5f9403ece5cc3cd37dcf2531",
   "pnpm": {
